objects/IMCDsecondaryaddress__c.object
<CustomObject>
    <fields>
        <fullName>BankData1__c</fullName>
        <label>Bank Data</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CertificationLogo1__c</fullName>
        <label>Certification Logo</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CompanyEmail1__c</fullName>
        <label>Company Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CompanyFax1__c</fullName>
        <label>Company Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CompanyPhone1__c</fullName>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CompanyWebsite1__c</fullName>
        <label>Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>IMCDcompanyCity1__c</fullName>
        <label>IMCD Company City</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMCDcompanyCountry1__c</fullName>
        <label>IMCD Company Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMCDcompanyPC1__c</fullName>
        <label>IMCD Company PC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMCDcompanyState1__c</fullName>
        <label>IMCD Company State/County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMCDcompanyStreet1__c</fullName>
        <label>IMCD Company Street</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMCDcompany__c</fullName>
        <label>IMCD Company</label>
        <referenceTo>ImcdCompany__c</referenceTo>
        <relationshipLabel>IMCD secondary addresses</relationshipLabel>
        <relationshipName>IMCD_secondary_addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SAcode__c</fullName>
        <description>code used to identify the sub-address for using on the quote as an tested field for TC condition</description>
        <externalId>true</externalId>
        <inlineHelpText>code used to identify the sub-address for using on the quote as an tested field for TC condition</inlineHelpText>
        <label>SAcode</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>TF_Find__c</fullName>
        <defaultValue>&quot;all&quot;</defaultValue>
        <description>Field used to find and display IMCD secondary addresses on Quote level</description>
        <inlineHelpText>Field used to find and display IMCD secondary addresses on Quote level</inlineHelpText>
        <label>TF Find</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>IMCD secondary address</label>
    <nameField>
        <label>IMCD secondary address Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IMCD secondary addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>